scrollbar fixed

--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -2,7 +2,7 @@
   height: calc(100vh - 70px);
   ::-webkit-scrollbar {
     height: 6px;
-    width: 3px;
+    width: 6px;
   }
   /* Track */
   ::-webkit-scrollbar-track {
